# ResumeTailor

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  conftest.py  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/agents/: AGENT-ROSTER.md  engineer-a.agent.md  engineer-b.agent.md  engineer-c.agent.md  engineer-d.agent.md  engineer-e.agent.md  engineer-f.agent.md  interview-prep-tutor.agent.md  platform-lead.agent.md
.github/workflows/: ci.yml  contract-gate.yml  deploy-qa.yml  planning-gate.yml
docs/coaching/: INTERVIEW-PREP-0001.md  STORIES-0001.md
docs/contracts/: CONTRACT-VERSION.md  cover-letter-draft-schema.md  export-service-interface.md  generation-service-interface.md  section-output-schema.md  session-schema.md
docs/data-science/: EVAL-PLAN-0001.md
docs/deployment/: AZURE-DEPLOYMENT-0001.md
docs/integration/: BLOCKERS.md  INTEGRATION-GATE.md
docs/qa/: QA-EVIDENCE-LOG.md
docs/ux/: DESIGN-GUIDE-0001.md  UX-0001.md
document_ingestion/: __init__.py  apps.py  exceptions.py  services.py  tasks.py  tests.py  urls.py  views.py
document_ingestion/tests/: test_services.py  test_upload.py
document_rendering/: __init__.py  apps.py  services.py  urls.py  views.py
evaluation/: __init__.py
generation/: __init__.py  models.py  service.py  tasks.py  tests.py
infra/: main.bicep
resume_sessions/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
resumetailor/: __init__.py  asgi.py  health.py  urls.py  wsgi.py
scripts/: smoke.py
templates/: base.html
(+43 files in other folders)
