[project]
name = "resumetailor"
version = "0.1.0"
description = "ResumeTailor V1 — PDF resume tailoring with GitHub Models"
requires-python = ">=3.11"
dependencies = [
    "Django==4.2.26",
    "celery==5.3",
    "redis==5.0",
    "psycopg2-binary==2.9.11",
    "PyMuPDF==1.24",
    "openai==1.30",
    "django-storages[azure]==1.14",
    "gunicorn==22.0.0",
]

[tool.resumetailor]
mode = "implementation"
